fixed squished image

--- a/client/src/components/artists.css
+++ b/client/src/components/artists.css
@@ -50,5 +50,6 @@
   /* border: 1px solid red; */
 }
 .artist-card img {
-  border-radius: 50%;
+  border-radius: 100%;
+  object-fit: cover;
 }
